fix: smooth scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1614,7 +1614,7 @@ body.price {
   padding: 0 0 3rem 3rem;
 }
 .pricing_promote .promote_card {
-  min-width: 350px;
+  min-width: 300px;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   border-radius: 2rem;
   padding: 2rem;
