--- a/scss/_tarifs.scss
+++ b/scss/_tarifs.scss
@@ -221,7 +221,7 @@ body.price {
             img {
                 width: 5rem;
             }
-            min-width: 350px;
+            min-width: 300px;
             // height: 500px;
             box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
             border-radius: 2rem;
